--- a/index.html
+++ b/index.html
@@ -20,4 +20,77 @@
         <a href="music.html">Music</a>
         <a href="live.html">Live</a>
         <a href="fantasy.html">Fantasy</a>
-        <a href="
+        <a href="contact.html">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main id="main">
+    <section class="hero">
+      <div class="container">
+        <p class="kicker">Independent work, housed in one place.</p>
+        <h1 class="title">DARREN<br/>STEPTOE</h1>
+        <p class="subhead">Film. Writing. Music. Live.</p>
+
+        <div class="hero-actions">
+          <a class="btn" href="work.html">Enter</a>
+          <a class="btn ghost" href="contact.html">Reach me</a>
+        </div>
+      </div>
+
+      <div class="shape" aria-hidden="true">
+        <div class="shape-grid">
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+        </div>
+      </div>
+    </section>
+
+    <section class="modules">
+      <div class="container">
+        <h2 class="section-title">Modules</h2>
+
+        <div class="grid">
+          <a class="panel" href="work.html">
+            <span class="panel-label">WORK</span>
+            <span class="panel-meta">Film + documentary + projects</span>
+          </a>
+
+          <a class="panel" href="books.html">
+            <span class="panel-label">BOOKS</span>
+            <span class="panel-meta">In progress → purchase later</span>
+          </a>
+
+          <a class="panel" href="music.html">
+            <span class="panel-label">MUSIC</span>
+            <span class="panel-meta">SoundCloud listening</span>
+          </a>
+
+          <a class="panel" href="live.html">
+            <span class="panel-label">LIVE</span>
+            <span class="panel-meta">Streams + archive</span>
+          </a>
+
+          <a class="panel wide" href="fantasy.html">
+            <span class="panel-label">FANTASY FOOTBALL</span>
+            <span class="panel-meta">Signup + rules + season archive</span>
+          </a>
+
+          <a class="panel wide" href="contact.html">
+            <span class="panel-label">CONTACT</span>
+            <span class="panel-meta">Email + links</span>
+          </a>
+        </div>
+
+        <footer class="footer">
+          <p>© <span id="year"></span> Darren Steptoe</p>
+        </footer>
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
