--- a/fantasy.html
+++ b/fantasy.html
@@ -31,21 +31,10 @@
         <div class="section-head">
           <h1 class="page-title">Fantasy Football</h1>
           <p class="section-note">Blitzed and Confused — league hub, payments, rules, and last season results.</p>
-
-          <!-- Logos (put files in /assets/logos/) -->
-          <div class="league-logos">
-            <a href="https://fantasy.nfl.com" target="_blank" rel="noopener noreferrer" aria-label="NFL Fantasy">
-              <img src="assets/logos/nfl-fantasy.svg" alt="NFL Fantasy logo" />
-            </a>
-
-            <a href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer" aria-label="LeagueSafe">
-              <img src="assets/logos/leaguesafe.svg" alt="LeagueSafe logo" />
-            </a>
-          </div>
         </div>
 
+        <!-- PAYMENTS / CTA -->
         <div class="stack">
-          <!-- PAYMENTS / CTA -->
           <article class="item">
             <h3>Pay entry fee (LeagueSafe)</h3>
             <p>
@@ -58,7 +47,9 @@
               </a>
               <a class="btn small ghost" href="#rules">Read the rules</a>
             </div>
-            <p class="micro">LeagueSafe link: https://www.leaguesafe.com/join/4351949</p>
+            <p class="micro">
+              LeagueSafe link: https://www.leaguesafe.com/join/4351949
+            </p>
           </article>
 
           <!-- LAST SEASON RESULTS -->
@@ -76,8 +67,7 @@
             </div>
 
             <p class="micro">
-              Congrats to No Malice (champion) and Penei for your thoughts (runner-up).
-              Winners were asked to send LeagueSafe names for payout.
+              Notes: Congrats to No Malice (champion) and Penei for your thoughts (runner-up). Winners were asked to send LeagueSafe names for payout.
             </p>
           </article>
 
@@ -138,8 +128,7 @@
           <article class="item">
             <h3>Trades</h3>
             <p>
-              Trades are reviewed/approved by commissioner.
-              Trade deadline: <strong>November 21, 2025</strong> (date will update each season).
+              Trades are reviewed/approved by commissioner. Trade deadline: <strong>November 21, 2025</strong> (date will update each season).
               In-season draft pick trades are allowed. Any collusion results in removal.
             </p>
           </article>
@@ -182,7 +171,9 @@
 
           <article class="item">
             <h3>Playoffs</h3>
-            <p>6 teams. Weeks 15–17. One week per matchup.</p>
+            <p>
+              6 teams. Weeks 15–17. One week per matchup.
+            </p>
           </article>
 
           <article class="item">
