--- a/fantasy.html
+++ b/fantasy.html
@@ -13,7 +13,9 @@
 
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="index.html" aria-label="Home">DS</a>
+      <a class="brand brand-image" href="index.html" aria-label="Home">
+  <img src="image_Original.jpeg" alt="Darren Steptoe logo" />
+</a>
       <div class="nav-links">
         <a href="work.html">Work</a>
         <a href="books.html">Books</a>
