--- a/fantasy.html
+++ b/fantasy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fantasy Football — Darren Steptoe</title>
-  <meta name="description" content="Blitzed and Confused — league hub, rules, payouts, and history." />
+  <meta name="description" content="Blitzed and Confused — league hub, payments, rules, and history." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -13,9 +13,9 @@
 
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
-      <a class="brand brand-image" href="index.html" aria-label="Home">
-  <img src="image_Original.jpeg" alt="Darren Steptoe logo" />
-</a>
+      <a class="brand" href="index.html" aria-label="Home">
+        <img src="./image_Original.jpeg" alt="Darren Steptoe" />
+      </a>
       <div class="nav-links">
         <a href="work.html">Work</a>
         <a href="books.html">Books</a>
@@ -35,7 +35,6 @@
           <p class="section-note">Blitzed and Confused — league hub, payments, rules, and last season results.</p>
         </div>
 
-        <!-- PAYMENTS / CTA -->
         <div class="stack">
           <article class="item">
             <h3>Pay entry fee (LeagueSafe)</h3>
@@ -49,12 +48,9 @@
               </a>
               <a class="btn small ghost" href="#rules">Read the rules</a>
             </div>
-            <p class="micro">
-              LeagueSafe link: https://www.leaguesafe.com/join/4351949
-            </p>
+            <p class="micro">https://www.leaguesafe.com/join/4351949</p>
           </article>
 
-          <!-- LAST SEASON RESULTS -->
           <article class="item">
             <h3>Last season results</h3>
             <p>Final placements from the most recent season snapshot:</p>
@@ -68,12 +64,9 @@
               <span class="link" role="note">6th — Delulu Bears Fan</span>
             </div>
 
-            <p class="micro">
-              Notes: Congrats to No Malice (champion) and Penei for your thoughts (runner-up). Winners were asked to send LeagueSafe names for payout.
-            </p>
+            <p class="micro">Congrats to No Malice (champion) and Penei for your thoughts (runner-up).</p>
           </article>
 
-          <!-- PAYOUTS -->
           <article class="item">
             <h3>Payouts</h3>
             <p>
@@ -85,13 +78,11 @@
               <span class="link" role="note">2nd: 25%</span>
               <span class="link" role="note">3rd: 15%</span>
             </div>
-            <p class="micro">Payments are tracked and paid out via LeagueSafe (majority approval).</p>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- RULES / CONSTITUTION -->
     <section id="rules" class="section alt">
       <div class="container">
         <div class="section-head">
@@ -114,7 +105,7 @@
             <p>
               Starters: <strong>1 QB</strong>, <strong>2 RB</strong>, <strong>2 WR</strong>, <strong>1 TE</strong>,
               <strong>1 Flex (WR/RB/TE)</strong>, <strong>1 K</strong>, <strong>1 DEF</strong>.
-              Bench: <strong>6</strong>. IR: <strong>3</strong>. No IDP. No Superflex.
+              Bench: <strong>6</strong>. IR: <strong>3</strong>.
             </p>
           </article>
 
@@ -123,7 +114,7 @@
             <p>
               Adds: max <strong>5 per week</strong>, <strong>35 per season</strong>. Trades: max <strong>10 per season</strong>.
               Waiver period is <strong>1 day</strong>, waiver type is <strong>Waiver Budget (100)</strong>.
-              Post-draft players are subject to waivers. Players lock at game time.
+              Players lock at game time.
             </p>
           </article>
 
@@ -139,7 +130,6 @@
             <h3>Keepers</h3>
             <p>
               Up to <strong>4 keepers</strong>. Keepers lock on the date of the league draft.
-              Additional keeper eligibility rules may be introduced before the season.
             </p>
           </article>
 
@@ -154,12 +144,11 @@
       </div>
     </section>
 
-    <!-- SETTINGS SNAPSHOT -->
     <section class="section">
       <div class="container">
         <div class="section-head">
           <h2 class="section-title">Settings Snapshot</h2>
-          <p class="section-note">A quick reference from the league settings page.</p>
+          <p class="section-note">Quick reference (full settings remain in NFL Fantasy).</p>
         </div>
 
         <div class="stack">
@@ -173,17 +162,12 @@
 
           <article class="item">
             <h3>Playoffs</h3>
-            <p>
-              6 teams. Weeks 15–17. One week per matchup.
-            </p>
+            <p>6 teams. Weeks 15–17. One week per matchup.</p>
           </article>
 
           <article class="item">
             <h3>Scoring</h3>
-            <p>
-              Half-PPR with standard yardage/TD settings and bonuses, plus defense and kicking enabled.
-              (Full scoring list is long — keep it on the league settings page.)
-            </p>
+            <p>Half-PPR with standard yardage/TD settings, plus defense and kicking enabled.</p>
           </article>
         </div>
 
