--- a/books.html
+++ b/books.html
@@ -135,22 +135,28 @@
           </article>
 
           <article class="item">
-            <h3>Release</h3>
-            <p>
-              <strong>Status:</strong> Unpublished manuscript (© 2025). :contentReference[oaicite:8]{index=8}
-              <br />
-              <strong>Coming soon.</strong> This page will be updated with the official release date and purchase link.
-            </p>
+  <h3>Release</h3>
+  <p>
+    <strong>Status:</strong> Unpublished manuscript (© 2025).<br />
+    <strong>Coming soon.</strong>  
+    Leave your email to be notified when the book is released.
+  </p>
 
-            <div class="item-actions">
-              <a class="btn small ghost" href="contact.html">Get notified</a>
-              <a class="btn small" href="contact.html">Contact</a>
-            </div>
+  <div class="item-actions">
+    <a
+      class="btn small"
+      href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Get notified
+    </a>
+  </div>
 
-            <p class="micro">
-              (If you want, we can add a real email signup next — Mailchimp, ConvertKit, or a simple Google Form.)
-            </p>
-          </article>
+  <p class="micro">
+    No spam. One email when it’s ready.
+  </p>
+</article>
 
           <article class="item">
             <h3>About the author</h3>
